CKAD/AdmissionWebhook/AdmissionWebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-policy.example.com"
webhooks:

  - name: "pod-policy.example.com"
    clientConfig:
    service:
      namespace: "webhook-namespace"
      name: "webhook-service"
    caBundle: "CiøtLSØtQk ...... tLSØK"
rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
    scope: "Namespaced"
